--- a/mystyle.css
+++ b/mystyle.css
@@ -5,7 +5,6 @@
 
 #title1 {
     font-family: 'Karma', serif;
-    color:rgb(9, 9, 146);
 }
 
 #content1 {
@@ -24,3 +23,6 @@ body {
     background-color: rgb(210, 232, 240);
 }
 
+a {
+    color:red;
+}
